minor code smells